# calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json
calculator/: CMakeLists.txt
calculator.demo/: CMakeLists.txt
calculator.demo/src/: main.cpp
calculator/include/: api.hpp  calculator.hpp  calculator_api.hpp  calculator_error.hpp  export.hpp  value.hpp  vector.hpp
calculator/include/detail/: number_t.hpp  value_t.hpp  vector.hpp  vector.tpp
calculator/src/: calculator.cpp  calculator_error.cpp  value.cpp  value_t.cpp  vector.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: calculator_tests.cpp  main.cpp
